--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@cedx/ngx-cookies": "^1.3.0",
+    "@fortawesome/fontawesome-free": "^5.1.1",
     "angular-datatables": "^5.0.0",
     "core-js": "^2.4.1",
     "ng2-ckeditor": "^1.2.0",
